src/objects/Land_Use__c.object
<CustomObject>
    <description>Object used to capture the different uses against a plot (used to allow one to many relationships)</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GFA_Sqft__c</fullName>
        <label>GFA Sqft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GFA_Sqmt__c</fullName>
        <label>GFA Sqmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_1__c</fullName>
        <label>Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <label>Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3__c</fullName>
        <label>Level 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plot_YARDI_Id__c</fullName>
        <label>Plot YARDI Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plot__c</fullName>
        <label>Plot</label>
        <referenceTo>Plot__c</referenceTo>
        <relationshipLabel>Land Use</relationshipLabel>
        <relationshipName>Land_Use</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_c__c</fullName>
        <label>Rate__c</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Split_Percent__c</fullName>
        <label>Split Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YARDI_Id__c</fullName>
        <externalId>true</externalId>
        <label>YARDI Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Land Use</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Land Use Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Land Use</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>